syntax = "proto3";

package infrastructure.rpc.cart.v1;

option go_package = "github.com/shortlink-org/shortlink/boundaries/shop/oms/internal/infrastructure/rpc/cart/v1";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";
import "infrastructure/rpc/cart/v1/model.proto";

// CartService is the service that provides cart operations.
service CartService {
  // Add adds an item to the cart.
  rpc Add(AddRequest) returns (google.protobuf.Empty);

  // Remove removes an item from the cart.
  rpc Remove(RemoveRequest) returns (google.protobuf.Empty);

  // Get gets the state of the cart.
  rpc Get(GetRequest) returns (GetResponse);

  // Reset clears the cart.
  rpc Reset(ResetRequest) returns (google.protobuf.Empty);
}

// AddRequest is the request message for adding an item to the cart.
message AddRequest {
  // Cart ID
  string customer_id = 1;
  // Item to add
  repeated infrastructure.rpc.cart.v1.CartItem items = 2;
}

// RemoveRequest is the request message for removing an item from the cart.
message RemoveRequest {
  // Cart ID
  string customer_id = 1;
  // Item to remove
  repeated infrastructure.rpc.cart.v1.CartItem item = 2;
}

// GetRequest is the request message for getting the cart state.
message GetRequest {
  // Cart ID
  string customer_id = 1;
}

// GetResponse is the response message for getting the cart state.
message GetResponse {
  // Cart state
  infrastructure.rpc.cart.v1.CartState state = 1;
}

// ResetRequest is the request message for resetting the cart.
message ResetRequest {
  // Cart ID
  string customer_id = 1;
}
